[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Swarnashruti Jupudi <swarna.s92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.5"
streamlit = "^1.28.2"
pydantic = "^2.5.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
